--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="mobile-menu">
       <a href="#">Home</a>
       <a href="#">Donate Blood</a>
-      <a href="#">Contact Us</a>
+      <a href="contact.html" target="_blank">Contact Us</a>
       <a href="login.html" target="_blank">Sign In</a>
     </div>
   </header>
